initial commit - updated index about and css

--- a/index.html
+++ b/index.html
@@ -11,10 +11,31 @@
 
 </head>
 
+<div>
+<header class="header-two">
+    <nav>
+        <a href="#">Services</a>
+        <a href="#"> Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="pages/about.html">About</a>
+        <a href="#">Contact</a>
+      </nav>
+
+      <img class="logo" src="img/lambda-black.png" alt="Lambda Logo.">
+
+
+    </header>
+
+    
+
 <body>
     <div class="container">
    
         <section class="top-content">
+
+          <img class="jumbo" src="img/jumbo.jpg" alt="hi">
+
             <div class="text-container">
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
