--- a/index.html
+++ b/index.html
@@ -8,12 +8,31 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
-
 </head>
 
 <body>
     <div class="container">
-   
+        <header>
+            <img src="img/lambda-black.png" alt="lambda-logo">
+            <nav>
+                <a href="#">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+            <img class="jumbo" src="img/jumbo.jpg" alt="road">
+        </header>
+
+
+
+
+
+
+
+
+
+
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
