--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <img src="img/lambda-black.png" alt="lambda-logo">
-            <nav>
+            <nav class="nav">
                 <a href="#">Home</a>
                 <a href="about.html">About</a>
                 <a href="#">Products</a>
