added similar header from home page onto about page

--- a/about.html
+++ b/about.html
@@ -7,12 +7,23 @@
   <title>Sprint Challenge - About</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
-
+  <link href="about.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <div class="container about-page">
+    <div class="container">
+        <header>
+            <img src="img/lambda-black.png" alt="lambda-logo">
+            <nav class="nav">
+                <a href="home.html">Home</a>
+                <a href="#">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+            <img class="city" src="img/jumbo-about.png" alt"city">
+        </header>
+
      
     About
 
