--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <img class="city" src="img/jumbo-about.png" alt"city">
         </header>
 
-   <section>  
+   <section class="top-content">  
     <h2>About</h2>
     <p>
       Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
@@ -32,49 +32,52 @@
   </section>
 
 
-
+<div class="border">
+  <section class="strategy"
     <img src="img/about-plan.png" alt="strategy">
     <h2>Strategy</h2>    
     <p>
       Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
     <button>Learn More</button>
+  </section>
 
-
-
+<section class="strategy how"
     <img src="img/about-working.png" alt="strategy">
     <h2>How We Work</h2>
     <p>
        Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
     <button>Learn More</button>
+  </section>
+</div>
 
-
-
+<section class="places">
     <img src="img/about-office.png" alt="strategy"> 
     <h1>Places We Work</h1>
     <p>
       Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
     <button>Learn More</button>
+</section>
 
-
-
+<section class="places">
     <img src="img/about-meeting.png" alt="strategy">
     <h2>Collaboration</h2>
     <p>
       Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
     <button>Learn More</button>
+</section>
 
-
-
-    <h2>Let's Work Together</h2>
+<section class="bottom-content">
+  <h2>Let's Work Together</h2>
     <p>
        Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
     </p>
+  </section>
+    
    
-        
       <footer>
         <nav>
           <a href="index.html">Home</a>
