--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 <div class="border">
   <section class="strategy"
     <img src="img/about-plan.png" alt="strategy">
-    <h2>Strategy</h2>    
+    <h2 class="hone">Strategy</h2>    
     <p>
       Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
@@ -44,7 +44,7 @@
 
 <section class="strategy how"
     <img src="img/about-working.png" alt="strategy">
-    <h2>How We Work</h2>
+    <h2 class="hone">How We Work</h2>
     <p>
        Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
@@ -54,7 +54,7 @@
 
 <section class="places">
     <img src="img/about-office.png" alt="strategy"> 
-    <h1>Places We Work</h1>
+    <h2 class="collab">Places We Work</h2>
     <p>
       Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
@@ -63,7 +63,7 @@
 
 <section class="places">
     <img src="img/about-meeting.png" alt="strategy">
-    <h2>Collaboration</h2>
+    <h2 class="collab">Collaboration</h2>
     <p>
       Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
