--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
 
 
 <div class="border">
-  <section class="strategy"
-    <img src="img/about-plan.png" alt="strategy">
+  <section class="strategy">
+  <img src="img/about-plan.png" alt="strategy">
     <h2 class="hone">Strategy</h2>    
     <p>
       Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
@@ -42,7 +42,7 @@
     <button>Learn More</button>
   </section>
 
-<section class="strategy how"
+<section class="strategy how">
     <img src="img/about-working.png" alt="strategy">
     <h2 class="hone">How We Work</h2>
     <p>
